# utility-network-schema-qa-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  configuration.md  finding-codes.md  input-formats.md  python-api.md  report-schema.md  validation-rules.md
docs/superpowers/plans/: 2026-07-16-v1-implementation.md  2026-07-20-field-mapping-semantic-qa.md
docs/superpowers/specs/: 2026-07-16-v1-design.md  2026-07-20-field-mapping-semantic-qa-design.md
docs/tutorials/: field-semantics.md  stormwater.md  wastewater.md  water.md
examples/stormwater/: README.md  project.yml
examples/stormwater/data/: asset_types.csv  attribute_rules.csv  data_reference.csv  dirty_areas.csv  mappings.csv  network_rules.csv  source_schema.csv  target_domains.csv  target_schema.csv
examples/stormwater/rules/: engineering_rules.yml
examples/wastewater/: README.md  project.yml
examples/water/: README.md  project.yml
schemas/: validation-report-v1.schema.json
src/un_schema_qa/: __init__.py  api.py  cli.py  config.py  engine.py  exceptions.py  filters.py  loaders.py  normalization.py  row_schemas.py  rules.py  version.py  workbooks.py
tests/: test_api.py  test_cli.py  test_config.py  test_documentation.py  test_engine.py  test_engineering_rules.py  test_filters.py  test_loaders.py  test_normalization.py  test_package.py
tests/integration/: test_domain_examples.py  test_installed_package.py  test_water_example.py
tests/models/: test_domain_models.py  test_findings.py  test_mapping_models.py
tests/readers/: test_excel_reader.py  test_structured_readers.py
tests/reporters/: test_human_reports.py  test_machine_reports.py
tests/validators/: test_asset_validator.py  test_attribute_rule_validator.py  test_data_reference_validator.py  test_dirty_area_validator.py  test_domain_validator.py  test_field_semantics_validator.py  test_filter_validator.py  test_mapping_validator.py  test_network_rule_validator.py  test_schema_validator.py
(+54 files in other folders)
