[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "utility-network-schema-qa-toolkit"
version = "1.0.0"
description = "License-free validation for Utility Network schemas, mappings, rules, and migration QA artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sunny Yueh" }]
keywords = ["arcgis", "gis", "utility-network", "data-migration", "quality-assurance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "Jinja2>=3.1,<4",
  "openpyxl>=3.1,<4",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "jsonschema>=4.22,<5",
  "mypy>=1.10,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
  "twine>=5,<7",
  "types-PyYAML>=6.0.12,<7",
  "types-openpyxl>=3.1,<4",
]

[project.scripts]
un-schema-qa = "un_schema_qa.cli:main"

[project.urls]
Homepage = "https://github.com/Sunnyyueh/utility-network-schema-qa-toolkit"
Issues = "https://github.com/Sunnyyueh/utility-network-schema-qa-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/un_schema_qa"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["un_schema_qa"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["un_schema_qa"]
